--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"scripts":{"start":"vite"},"devDependencies":{"autoprefixer":"^10.4.14","ndcss":"^3.3.2","postcss":"^8.4.24","tailwindcss":"^3.3.2"},"dependencies":{"vite":"^4.3.9"}}
+{"scripts":{"start":"vite"},"devDependencies":{"autoprefixer":"^10.4.14","ndcss":"^3.3.2","postcss":"^8.4.24","tailwindcss":"^3.3.2"},"dependencies":{"aos":"^2.3.4","vite":"^4.3.9"}}
